VR Tracking Sensor 테스트 // 버그 존재

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TPSFPS/Levels/Main_Level.Main_Level
-EditorStartupMap=/Game/TPSFPS/Levels/Main_Level.Main_Level
+GameDefaultMap=/Game/TPSFPS/Levels/Lobby.Lobby
+EditorStartupMap=/Game/TPSFPS/Levels/Lobby.Lobby
 GlobalDefaultGameMode="/Script/WarGame.WarGameGameMode"
 GameInstanceClass=/Game/TPSFPS/BP_GI_WarGame.BP_GI_WarGame_C
 
