--- a/WarGame.uproject
+++ b/WarGame.uproject
@@ -39,6 +39,18 @@
 				"Win64",
 				"Android"
 			]
+		},
+		{
+			"Name": "XRVisualization",
+			"Enabled": true
+		},
+		{
+			"Name": "XRCreativeFramework",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Linux"
+			]
 		}
 	]
 }
